labs/network-policy/policies/allow-allowed-client-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-allowed-client-egress
  namespace: network-policy-demo
spec:
  podSelector:
    matchLabels:
      access: allowed
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: echo-server
      ports:
        - protocol: TCP
          port: 8080
