labs/network-policy/policies/allow-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: network-policy-demo
spec:
  # Namespace içindeki tüm podları seçer
  podSelector: {}

  policyTypes:
  - Egress

  egress:
  - to:
    # Tek bir liste elemanı (-) altında hem namespace hem pod seçici birlikte tanımlanır (AND mantığı)
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
