labs/network-policy/policies/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: network-policy-demo
spec:
  podSelector: {}
  policyTypes: 
  - Egress
  egress: []
